@@ -5,6 +5,8 @@ CHANGES IN CUPS V1.3
 
 	- Documentation updates (STR #1775, STR #2027, STR #2130,
 	  STR #2131, STR #2263, STR #2356, STR #2397)
+	- CUPS now supports authentication via peer credentials
+	  over domain sockets (STR #2242, STR #2277)
 	- The CUPS sample driver PPDs are now generated by the PPD
 	  compiler and include all of the localized languages by
 	  default (STR #2164)
